# data-pf

./: .gitignore  CLAUDE.md  README.md  debug_clean_data.py  docker-compose.yml
.claude/: settings.json
.devcontainer/: devcontainer.json  postCreate.sh  postStart.sh
.github/instructions/: 00-project.md
airflow/: Dockerfile  pyproject.toml  requirements.txt
airflow/config/: airflow.cfg
airflow/dags/: .gitignore  ingest_yfinance.py  technical_indicators.py  technical_indicators_pipeline.py
airflow/scripts/: bronze_yfinance.py  create_hive_table.py  create_schema.py  spark_session.py
airflow/scripts/bronze/: ingest_yfinance.py
airflow/scripts/common/: delta_utils.py  spark_session.py
airflow/scripts/feature/: engineer_technical_features.py
airflow/scripts/gold/: aggregate_technical_indicators.py  calculate_technical_features.py
airflow/scripts/quality/: validate_technical_features.py
airflow/scripts/silver/: clean_stock_data.py  clean_yfinance.py
doc/: PLAN.md  RDD.md  SPEC.md
doc/image/: system.drawio
hive/: Dockerfile  entrypoint.sh  hive-site.xml  metastore-site.xml
spark/: Dockerfile  spark-defaults.conf
